loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:4: error: '(' expected but '{' found.
else if{
       ^LoopCourse:9: error: illegal start of simple expression
	}
        ^